start senator profile

--- a/deliverable/deliverable.ipynb
+++ b/deliverable/deliverable.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H8LA00017\n"
+      "S6GA00119\n"
      ]
     }
    ],
@@ -272,6 +272,35 @@
    "metadata": {},
    "source": [
     "## Senator profile (name, state, party, picture) ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Candidate:   ISAKSON, JOHN HARDY \n",
+      "State:       GA                  \n",
+      "Party:       REP                 \n"
+     ]
+    }
+   ],
+   "source": [
+    "senator_info = session.query(Candidate.name, Candidate.office_st, Candidate.party).\\\n",
+    "                        filter(Candidate.id == senator_id).\\\n",
+    "                        first()\n",
+    "        \n",
+    "full_name, state, party = senator_info\n",
+    "\n",
+    "print '%-12s %-20s' % ('Candidate:', full_name)\n",
+    "print '%-12s %-20s' % ('State:', state)\n",
+    "print '%-12s %-20s' % ('Party:', party)"
    ]
   },
   {
